Add template feature (std), move to no_std.

--- a/rrs-lib/Cargo.toml
+++ b/rrs-lib/Cargo.toml
@@ -16,3 +16,7 @@ repository = "https://github.com/GregAC/rrs/tree/main/rrs-lib"
 paste = "1.0"
 downcast-rs = "1.2.0"
 num_enum = "0.5.3"
+
+[features]
+default = ["template"]
+template = []
