--- a/rrs-lib/Cargo.toml
+++ b/rrs-lib/Cargo.toml
@@ -15,7 +15,7 @@ repository = "https://github.com/GregAC/rrs/tree/main/rrs-lib"
 [dependencies]
 paste = "1.0"
 downcast-rs = "1.2.0"
-num_enum = "0.5.3"
+num_enum = { version="0.5.3", default-features=false }
 
 [features]
 default = ["template"]
